# architecture_ideas

./: .gitignore  ARCHITECTURE.md  Makefile  c_grpc.md  c_protobuf.md  docker-compose.yml  todo.md
config/: otel-collector.yaml  prometheus.yml
config/elasticsearch/: ilm-policy.json
config/grafana/dashboards/: microservices.json
config/grafana/provisioning/datasources/: datasources.yml
implementations/: c.md  cpp.md  csharp.md  go.md  python-async.md  python-sync.md  rust.md  zig.md
proto/: common.proto  services.proto
screenshots/: TRACE-LOG-CORRELATION-DEMO.md
services/service-a/: Dockerfile  go.mod  go.sum  main.go
services/service-b/: Cargo.toml  Dockerfile  build.rs
services/service-b/src/: main.rs
services/service-c/: Dockerfile  main.py  requirements.txt
services/service-d/: Dockerfile  Program.cs  ServiceD.csproj
services/service-e/: CMakeLists.txt  Dockerfile  main.cpp  main_simple.cpp
services/service-f/: CMakeLists.txt  Dockerfile  main.cpp  main_simple.cpp
services/service-f/src/: main.c  otlp_exporter.c  otlp_exporter.h  otlp_log_exporter.c  otlp_log_exporter.h  otlp_metrics_exporter.c  otlp_metrics_exporter.h
