[package]
name = "service-b"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "service-b"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic", "logs", "metrics"] }
opentelemetry-appender-tracing = "0.27"
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
